--- a/bumigora.html
+++ b/bumigora.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>belajar branch</title>
+    <title>halaman branch</title>
 </head>
 <body>
     
-    <h1>Halaman contact</h1>
+    <h1>brach</h1>
 
 </body>
 </html>
